All features implemented, styling added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1 class="page-title">Mindex Coding Challenge</h1>
-<app-employee-list></app-employee-list>
+<p class="mat-h1 w-100 text-center my-4">Mindex Coding Challenge</p>
+<app-employee-list class="w-100 m-0"></app-employee-list>
